hphp/test/zend/good/ext/gd/tests/imagestring_basic.php.skipif
<?php
if (!gd_info()['PNG Support']) echo 'skip';
