hphp/test/zend/bad/Zend/tests/bug62097.php.skipif
<?php
if (PHP_INT_MAX !== 2147483647)
	die('skip for system with 32-bit wide longs only');